1.webpack初探打包模式

--- a/1.webpack初探/1.webpack初探.md
+++ b/1.webpack初探/1.webpack初探.md
@@ -52,4 +52,8 @@ webpack是静态模块打包工具。
     这样就使用script的配置，实现运行npm run ** 进行打包。
   - 在script中使用webpack命令，默认在当前项目查找webapck依赖，而非全局环境。
 
-4. 为什么
+4. 打包模式
+   - mode: production
+    默认为production生产环境，打包出来的js文件会被压缩。
+   - mode: development
+    声明mode为development开发环境时，打包出来的js文件不会被压缩。
