--- a/1.webpack初探/1.webpack初探.md
+++ b/1.webpack初探/1.webpack初探.md
@@ -1,17 +1,30 @@
 #### webpack初探
 ##### 1. 什么是webpack
-webpack是静态模块打包工具。
+官网中对webpack的描述，webpack是静态模块打包工具。
+![webpack是什么](./imgs/1.concept.png)
 ##### 2. webapck初体验
-- npm init  
-  初始化node项目，项目中生成package.json文件
-- npm install webpack webpack-cli -S
-  安装webapck和webpack-cli依赖
+- node项目初始化
+  - 命令：npm init
+  然后根据提示一路yes，然后项目就初始化成功了。
+  - 或者 npm init -y
+  这样表示初始化项目都是用默认配置，不需要一路yes。
+  - 运行结果
+  生成一个带有package.json文件的项目。
+  ![项目初始化](./imgs/2.init.png)
+
+- 安装webpack、webpack-cli依赖
   - webpack
     对资源模块进行打包的核心库。
   - webpack-cli
     保证webpack命令可以在CMD中运行。
-  - 安装指定版本的依赖
+  - 安装指定版本的依赖，通过@符指定版本
     npm install xx@xxx
+  - 命令：npm install webpack webpack-cli -S
+    1. 目录中会生成一个node_modules文件夹，存放安装的依赖。
+    ![node_modules](./imgs/3.node_modules.png)
+    1. package.json中会记录webapck和webpack-cli的安装记录。
+    ![package.json](./imgs/4.packageJson.png)
+    
 - npx webpack index.js
   对入口js文件进行打包，打包完后默认会在根目录下生成一个/dist/main.js文件。
   - npx
