--- a/1.webpack初探/1.webpack初探.md
+++ b/1.webpack初探/1.webpack初探.md
@@ -25,24 +25,25 @@
     1. package.json中会记录webapck和webpack-cli的安装记录。
     ![package.json](./imgs/4.packageJson.png)
     
-- npx webpack index.js
+  - 如何查看依赖包版本
+    - npm view webpack
+      查看**最新版本**的webpack信息
+    - npm view webpack versions
+      查看所有webpack历史版本
+    - npm view webpack versions --json
+      以json的形式输出webpack所有的历史版本信息。
+
+- webpack编译打包JS
+  - 命令： npx webpack index.js
   对入口js文件进行打包，打包完后默认会在根目录下生成一个/dist/main.js文件。
-  - npx
-    首先会从当前项目中的node_modules中查找是否有webpack依赖。
-  - webpack
-    真正进行打包的命令
-  - index.js
-    需要进行打包的文件
-  - **注意**：为什么我们不编写配置文件，webpack依然可以正确打包呢？
-    webpack本身内置了默认的配置文件，这里使用的就是内置的配置文件。
-    
-- 查看依赖包具体版本号
-  - npm view webpack
-    查看**最新版本**的webpack信息
-  - npm view webpack versions
-    查看所有webpack历史版本
-  - npm view webpack versions --json
-    以json的形式输出webpack所有的历史版本信息。
+    - npx命令作用
+      首先会从当前项目中的node_modules中查找是否有webpack依赖。
+    - webpack命令作用
+      真正进行打包的命令
+    - index.js
+      需要进行打包的文件
+    - **注意**：为什么我们不编写配置文件，webpack依然可以正确打包呢？
+      webpack本身内置了默认的配置文件，这里使用的就是默认的配置进行打包。
 
 ##### 3.webpack正确安装和使用
 为了保证webpack的打包速度，应该尽可能使用新版本的node和webpack。
@@ -57,10 +58,12 @@
     创建webpack.config.js文件，在项目目录下运行npx webpack，文件就会打包成功。
     - 文件名非webpack.config.js
       运行 npx webpack --config xxx.js，通过--config指定具体的配置文件
+     ![webpack配置文件](./imgs/6.webpack.png)
 
 3. 使用npm中的script简化打包操作
   - 在package.json文件中有"scripts": {}配置项
     配置：{bundle: 'webpack'}
+    ![script命令](./imgs/5.script.png)
   - 在cmd中运行npm run bundle
     这样就使用script的配置，实现运行npm run ** 进行打包。
   - 在script中使用webpack命令，默认在当前项目查找webapck依赖，而非全局环境。
