--- a/2.webpack核心概念/2.4.sourceMap的配置/4.sourceMap的配置.md
+++ b/2.webpack核心概念/2.4.sourceMap的配置/4.sourceMap的配置.md
@@ -64,3 +64,11 @@ index.js中只是简单的输出'hello world'，但是我们故意写错'consele
   - cheap作用
     1. 主要是简化错误的提示，当代码量很大时错误一般会提示在X行X列，但是这样会降低打包的性能，cheap会简化错误只提示到X行。
     2. 添加cheap后，只会映射业务代码之间的关系，对于第三方依赖包代码不会进行映射。
+    3. 如果我们也想管理第三方模块的错误映射，可以修改'cheap-source-map'为'cheap-module-source-map'。
+- 配置eval-source-map
+  eval形式是打包速度最快的，但是如果项目很复杂，eval提示的错误不一定全面。
+- 最佳实践
+  - development模式下使用cheap-module-eval-source-map
+    提示的错误比较全面，同时打包的速度比较快。
+  - production模式下使用'cheap-module-source-map'
+    错误提示会更全面，同时打包速度也比较快。
