--- a/2.webpack核心概念/2.5.devServer的配置/5.webpack-devserver配置.md
+++ b/2.webpack核心概念/2.5.devServer的配置/5.webpack-devserver配置.md
@@ -2,3 +2,64 @@
 在之前的练习中，每次修改完webpack.config.js后都需要重新运行命令进行编译，这样很影响开发效率，那么如何去解决呢？
 ##### 1. watch配置项
 在webpack.config.js中添加watch配置选项，可以监控文件的改变，当文件改变的时候可以进行重新编译。
+![watch配置](./imgs/1.watch.png)
+配置watch选项后，每次更新index.js后，只要保存就会完成重新编译。
+- 缺点
+  1. 编译完成后index.html无法直接在浏览器中打开，需要手动打开。
+  2. 文件修改后需要重新刷新页面才能看到变化。
+
+##### 2. webpackDevServer配置
+webpack-dev-server可以解决我们使用watch遇到的问题。
+- 安装webpack-dev-server
+  ```
+    cnpm install webpack-dev-server -D
+  ```
+- 配置webpack.config.js文件
+  - contentBase
+    表示devServer服务器启动的根目录。
+  - open选项
+    表示编译完成后自动在默认浏览器打开页面
+  - port
+    表示服务启动的端口，默认为8080。
+  ![devServer配置](./imgs/2.devServer-default.png)
+- 在package.json中添加script
+  ![script命令](./imgs/3.package-command.png)
+- 运行命令
+  ```
+    npm run start
+  ```
+  ![devServer运行编译](./imgs/4.devServer-result.png)
+- 编译运行结果
+  1. 页面在浏览器中默认启动打开。
+  2. 修改index.js后，自动完成编译并且浏览器自动进行刷新。
+  ![devServer编译结果](./imgs/5.devServer-html.png)
+
+##### 3. webpack-dev-middleware配置
+我们可以使用express和webpack-dev-middleware实现简易版的webpack-dev-server。
+- 安装express和webpack-dev-middleware。
+```
+  cnpm install express webpack-dev-middleware -D
+```
+- 在src的同级目录下新建server.js文件
+![server文件](./imgs/6.server.js.png)
+- 在webpack.config.js的output选项中添加publicPath选项
+  ![publicPath选项](./imgs/7.publicPath.png)
+- 在package.json中添加script短命令
+  ![script命令](./imgs/8.script.png)
+- 运行命令进行编译打包
+  ```
+    npm run server
+  ```
+  ![server编译](./imgs/9.server-complie.png)
+- 在浏览器中访问localhost:3000
+  ![浏览器访问](./imgs/10.complie-result.png)
+- 修改index.js中代码，保存后重新保存。
+  ![重新编译](./imgs/11.auto-complie.png)
+  刷新浏览器查看控制台内容
+  ![重新编译结果](./imgs/12.recomplie-result.png)
+
+##### 3. Hot Module Replacement的配置
+热模块更新，简称HMR。
+- 开启热模块更新
+  如果不开启热模块更新，当页面的样式发生变化时，整个浏览器页面都会进行刷新，但是我们只是想调试样式，这样就会导致开发效率的降低。
+  ![热模块更新](./imgs/13.hot-config.png)
