webpack热模块更新

--- a/2.webpack核心概念/2.5.devServer的配置/5.webpack-devserver配置.md
+++ b/2.webpack核心概念/2.5.devServer的配置/5.webpack-devserver配置.md
@@ -60,6 +60,51 @@ webpack-dev-server可以解决我们使用watch遇到的问题。
 
 ##### 3. Hot Module Replacement的配置
 热模块更新，简称HMR。
-- 开启热模块更新
-  如果不开启热模块更新，当页面的样式发生变化时，整个浏览器页面都会进行刷新，但是我们只是想调试样式，这样就会导致开发效率的降低。
-  ![热模块更新](./imgs/13.hot-config.png)
+- 局部更新css样式
+  - 编写index.js文件
+  ![css局部更新](./imgs/14.css-hot.png)
+  - 编写style.css文件
+  ![css局部更新样式](./imgs/15.css-odd.png)
+  - 运行编译打包命令
+  ```
+    npm run start
+  ```
+  - 点击按钮查看结果
+  ![css局部更新结果](./imgs/16.css-result.png)
+  当点击按钮后就会生成div元素，同时所有偶数div元素都有背景色。
+  - 修改style.css中的背景色
+    1. 结果：浏览器刷新所有之前新建的div元素都消失了
+    ![css样式重新打包](./imgs/17.css-part.png)
+    1. 期望：我们只希望div样式进行切换，而不是所有的元素都丢失。
+    2. 这就需要开启webpack的**热模块更新**
+  - 修改webpack.config.js文件配置
+  ![热模块更新配置](./imgs/13.hot-config.png)
+  - 开启热模块更新后，再次修改style.css中元素背景色
+  ![热模块更新css重新编译](./imgs/18.css-rebuild.png)
+  我们可以看到页面只是更新了对应div的样式，页面并没有更新元素并没有丢失。
+
+- 局部更新js内容
+  - 编写counter.js文件
+  ![编写counter文件](./imgs/19.counter.png)
+  - 编写number.js文件
+  ![编写number文件](./imgs/20.number.png)
+  - 编写index.js文件，引入counter.js和number.js文件，并执行相应的方法。
+  ![编写index.js文件](./imgs/21.index-js.png)
+  - 运行命令编译打包代码
+  ```
+    npm run start
+  ```
+  - 点击第一个div改变数值
+  ![index.js第一次编译](./imgs/22.index-first.png)
+  - 修改number.js文件中的数值，保存后重新编译
+  我们将number中的3000改为1000。
+  ![number中数字修改](./imgs/23.number-change.png)
+  但是浏览器中数字并没有变成1000。
+  ![浏览器中数字未改变](./imgs/24.browser-change.png)
+  - 修改index.js文件
+  ![index文件修改](./imgs/25.index-change.png)
+  当number文件发生变化时，重新执行number()函数。
+    - 注意：
+      webpack.config.js需要和上文一致。
+      ![热模块更新配置](./imgs/13.hot-config.png)
+  至此我们就完成了webpack中热模块更新的配置。
