--- a/2.webpack核心概念/2.5.devServer的配置/5.webpack-devserver配置.md
+++ b/2.webpack核心概念/2.5.devServer的配置/5.webpack-devserver配置.md
@@ -108,3 +108,5 @@ webpack-dev-server可以解决我们使用watch遇到的问题。
       webpack.config.js需要和上文一致。
       ![热模块更新配置](./imgs/13.hot-config.png)
   至此我们就完成了webpack中热模块更新的配置。
+- 总结：为什么在局部更新css时，我们不需要写类似js中那一坨代码呢？
+  因为css-loader中其实已经帮我们实现了那一段代码。
