--- a/2.webpack核心概念/2.6.babel的配置/6.babel的配置.md
+++ b/2.webpack核心概念/2.6.babel的配置/6.babel的配置.md
@@ -34,8 +34,12 @@
     npm run bundle
   ```
   ![babel选项编译结果](./imgs/5.option-result.png)
-  上图中我们看到源代码中的const转成了var，箭头函数转成了普通函数，但是promise和map并没有转换，这个如何处理呢？这就需要借助polyfill了。
-
+  上图中我们看到源代码中的const转成了var，箭头函数转成了普通函数，但是promise和map并没有转换。
+- 注意：
+  - Babel默认只转换新的JavaScript**语法**，而不转换新的API，例如，Proxy\Promise\Reflect\Symbol等全局对象，以及一些定义在全局对象上的方法都不会转译。
+  - 如果想使用这些新的对象和方法，必须使用 polyfill。提供polyfill的有2个插件：babel-runtime和babel-polyfill
+  
+##### 3. webpack中配置babel-polyfill（业务代码）
 - 安装@babel/polyfill
   ```
     cnpm install @babel/polyfill
@@ -51,10 +55,34 @@
   ![polyfill按需打包结果](./imgs/9.need-result.png)
   从结果中我们可以看到main.js体积从989kb变成了157kb，只会将promise和map的实现打包进main.js中，这就实现了我们的按需引入。
   
-##### 3. webpack中配置babel-进阶
+##### 4. webpack中配置babel-runtime （第三方库）
 - targets选项
   配置浏览器的版本，如果配置的版本以上的浏览器都支持了ES6语法，那么就会忽略掉ES6转ES5的操作。
   ![polyfill按需打包结果](./imgs/10.browser.png)
   如果打包过程发现chrome67版本以上的浏览器都完全支持ES6语法了，那么编译过程中就会忽略掉ES6转ES5的转换。
 - transform-runtime的配置
   如果在开发类库或者第三方模块时，再使用上面polyfill的模式就会存在问题，polyfill在注入promise等变量时是通过全局变量的方式，这就会污染全局环境。
+  - 安装依赖
+  ```
+    cnpm install @babel/plugin-transform-runtime -D
+    cnpm install @babel/runtime -S
+  ```
+  @babel/plugin-transform-runtime实在开发环境中引入，@babel/runtime是在生产环境引入。
+  - 修改配置文件
+  在babel-loader中添加plugins选项
+  ![babel-runtime配置](./imgs/11.runtime-config.png)
+  注意这里需要将corejs设置为2，因为，babel-plugin-transform-runtime按需去polyfill API，但不能polyfill原型方法，这个时候就需要借助@babel/runtime-corejs2。
+  ```
+    cnpm install @babel/runtime-corejs2
+  ```
+
+##### 5. babelrc文件配置
+我们可以将webapck.config.js中关于babel-loader中的options选项单独配置成.babelrc文件。
+![babelrc文件](./imgs/12.babelrc.png)
+
+##### 6. 总结
+至此关于babel的两种配置方式就学习完成了。
+##### 7. 参考资料
+babel不同模块含义及关系：https://zhuanlan.zhihu.com/p/138108118
+
+  
