--- a/3.webpack高级概念/3.4.SplitChunksPlugin配置参数/4.SplitChunksPlugin配置参数详解.md
+++ b/3.webpack高级概念/3.4.SplitChunksPlugin配置参数/4.SplitChunksPlugin配置参数详解.md
@@ -65,5 +65,7 @@
       ![test-result文件](./imgs/13.test-result.png)
     此处的test.js并非是node_modules中，所以最后会打包到default组中。
   - 当需要拆分的文件同时满足vendors和default组时，要根据priority优先级决定，谁priority高就归属那一组。
+  - **注意**
+    cacheGroups中的配置参数针对的是**同步**导入。
 ##### 总结
   至此关于SplitChunksPlugin中的常用配置参数就学习完了。
