提交代码拆分补充

--- a/3.webpack高级概念/3.4.SplitChunksPlugin配置参数/4.SplitChunksPlugin配置参数详解.md
+++ b/3.webpack高级概念/3.4.SplitChunksPlugin配置参数/4.SplitChunksPlugin配置参数详解.md
@@ -5,7 +5,7 @@
   ![打包名字为数字](./imgs/1.number-name.png)
 2. 修改index文件
   ![修改名字加有vendors](./imgs/2.vendors-name.png)
-  在index.js中通过**魔法注释**的方式制定打包后拆分文件的名称为'lodash'，但是打包结果却为'vendors~lodash'，如果让打包的文件名为'lodash'呢？这个时候就需要借助splitChunks配置参数。
+  在index.js中通过**魔法注释**的方式指定打包后拆分文件的名称为'lodash'，但是打包结果却为'vendors~lodash'，如何让打包的文件名为'lodash'呢？这个时候就需要借助splitChunks配置参数。
 3. 修改webpack.common.config.js文件
   ![修改名字无vendors](./imgs/3.real-name.png)
   添加optimization配置项
