提交：1. splitChunksPlugin配置参数修改

--- a/3.webpack高级概念/3.4.SplitChunksPlugin配置参数/4.SplitChunksPlugin配置参数详解.md
+++ b/3.webpack高级概念/3.4.SplitChunksPlugin配置参数/4.SplitChunksPlugin配置参数详解.md
@@ -28,17 +28,19 @@
       ![同步index](./imgs/6.index.png)
     - 打包结果
       ![同步打包](./imgs/7.index-result.png)
-  - initial：表示对同步代码进行代码分割。
+  - initial：表示对同步引入的模块进行代码拆分。
 - minSize
   表示引入的第三方库大于minSize就进行代码拆分，如果小于minSize设置的值就不进行代码拆分，单位'b'
 - maxSize
   如果设置，表示对最后拆分的文件根据设置的大小尝试进行二次拆分。**一般不配置**
 - minChunks
-  表示当模块引入了至少X次后才会进行拆分。
+  表示需要拆分的模块至少共享X次后才会进行拆分。
 - maxAsyncRequests：**一般用默认值**
-  指定入口文件中最大打包的**异步**代码数，表示同时加载的模块数最多是X个。比如项目中引入了十几个类库，当maxAsyncRequests设置为5时，那么只会对前5个进行代码拆分，后面的就不会再进行代码拆分。
+  - **按需加载时**并行请求的最大数量。
+  如果设置同时加载的模块数最多是X个。比如项目中引入了十几个类库，当maxAsyncRequests设置为5时，那么只会对前5个进行代码拆分，后面的就不会再进行代码拆分。
 - maxInitialRequests： **一般用默认值**
-  指定入口文件中最大打包的**同步**代码数，入口文件加载的时候，入口文件可能会引入其他的类库，入库文件做代码分割也只能分割出X个，如果超过设置的值就不会在分割。
+  - 入口点的最大并行请求数。
+  入口文件加载的时候，如果设置最多同时加载的模块数是X个，入库文件做代码拆分也只能拆分出X个，如果超过设置的值就不会在拆分。
 - automaticNameDelimiter
   - 表示生成的文件名称中的分隔符，默认为'~'
   ![默认分隔符](./imgs/2.vendors-name.png)
@@ -50,7 +52,6 @@
     - priority：表示优先级
     - filename: 对打包后的文件重新命名
   - default
-    - minChunks
     - priority：表示优先级
     - reuseExistingChunk：对打包过的模块不再进行打包，直接进行复用
     - filename：对打包后的文件进行重新命名
@@ -66,6 +67,7 @@
     此处的test.js并非是node_modules中，所以最后会打包到default组中。
   - 当需要拆分的文件同时满足vendors和default组时，要根据priority优先级决定，谁priority高就归属那一组。
   - **注意**
-    cacheGroups中的配置参数针对的是**同步**导入。
+    当模块是异步导入的模式时，cacheGroup中filename配置项需要注释掉，否则会报错。
+    ![filename报错](./imgs/14.filename-error.png)
 ##### 总结
   至此关于SplitChunksPlugin中的常用配置参数就学习完了。
