--- a/3.webpack高级概念/3.7.浏览器缓存/7.浏览器缓存.md
+++ b/3.webpack高级概念/3.7.浏览器缓存/7.浏览器缓存.md
@@ -59,4 +59,17 @@ webpack打包过程中进行兼容处理的操作。
 ##### 修改this的指向
 模块中全局环境的this指向的是模块本身，如果我们想让模块指向window，如何处理呢?
 - 模块中的this
-  
+  ![模块中this](./imgs/14.console-this.png)
+  ![模块中this](./imgs/15.this-result.png)
+  上例中我们看到模块中的this并非指向window。
+- 修改模块中this的指向
+  - 安装imports-loader
+  ```
+    npm install imports-loader -D
+  ```
+  - 修改webpack配置
+  ![imports配置](./imgs/16.imports-config.png)
+  - 编译后结果
+  ![imports配置window](./imgs/17.imports-result.png)
+
+- 至此关于webpack中的shimming我们就学习这么多，更多参考官方文档。
