webpack中的环境变量

--- a/3.webpack高级概念/3.7.浏览器缓存/7.浏览器缓存.md
+++ b/3.webpack高级概念/3.7.浏览器缓存/7.浏览器缓存.md
@@ -73,3 +73,28 @@ webpack打包过程中进行兼容处理的操作。
   ![imports配置window](./imgs/17.imports-result.png)
 
 - 至此关于webpack中的shimming我们就学习这么多，更多参考官方文档。
+
+##### webpack中的环境变量
+前面的demo中我们都是分别写了开发环境(webpack.dev.config.js)和生产环境(webpack.prod.config.js)对应的webpack配置，然后编译的时候根据环境分别执行不同配置。
+![webpack的配置](./imgs/18.webpack-config.png)
+- 未使用环境变量
+  - webpack.dev.config.js配置
+  ![webpack-dev的配置](./imgs/19.webpack-dev.png)
+  - webpack.prod.config.js配置
+  ![webpack-dev的配置](./imgs/20.webpack-prod.png)
+  - package.json配置
+  ![package.json的配置](./imgs/21.package-json.png)
+  在开发环境编译时我们需要运行npm run bundle命令，在生产环境编译时我们需要运行npm run build命令，我们需要针对不同的环境，运行不同的配置文件。
+- 使用环境变量
+  - 修改webpack.common.config.js文件
+  ![修改common的配置](./imgs/22.common-config.png)
+  导出方法接收env参数判断是'开发环境'还是'生产环境'，根据参数然后执行不同的配置文件。
+  - 修改webpack.dev.config.js文件
+  ![修改dev的配置](./imgs/23.dev-config.png)
+  - 修改webpack.prod.config.js文件
+  ![修改prod的配置](./imgs/24.prod-config.png)
+  - 修改package.json中的script命令。
+  ![修改package的配置](./imgs/25.package-json.png)
+  package.json中不同的命令都执行webpack.common.config.js文件，只是根据参数不同webpack.commmon.config.js会执行不同的逻辑。
+- 总结
+  以上是两种分环境编译打包的方式，可以自行选择。
